[gd_scene load_steps=3 format=3 uid="uid://no1wqqm7d1pu"]

[ext_resource type="Theme" uid="uid://cubpqq8pqv8re" path="res://ui/ui_theme.tres" id="1_r0681"]
[ext_resource type="Script" path="res://ui/game_end/win.gd" id="2_ujple"]

[node name="win" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_r0681")
script = ExtResource("2_ujple")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 709.0
offset_bottom = 589.0

[node name="header" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
offset_right = 709.0
offset_bottom = 180.0
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 50

[node name="Label" type="Label" parent="VBoxContainer/header"]
layout_mode = 2
offset_left = 112.0
offset_top = 50.0
offset_right = 596.0
offset_bottom = 130.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Geschafft!"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
offset_left = 81.0
offset_top = 184.0
offset_right = 627.0
offset_bottom = 298.0
size_flags_horizontal = 4
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
offset_right = 496.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 24
text = "Herzlichen Glückwunsch
Du  hast den Schatz gefunden"
horizontal_alignment = 1

[node name="Score" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
offset_left = 232.0
offset_top = 302.0
offset_right = 477.0
offset_bottom = 488.0
size_flags_horizontal = 4
theme_override_constants/margin_top = 54
theme_override_constants/margin_bottom = 54

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Score"]
layout_mode = 2
offset_top = 54.0
offset_right = 245.0
offset_bottom = 132.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBoxContainer/Score/VBoxContainer"]
layout_mode = 2
offset_right = 245.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 32
text = "Dein Score:"

[node name="Label2" type="Label" parent="VBoxContainer/Score/VBoxContainer"]
layout_mode = 2
offset_left = 113.0
offset_top = 46.0
offset_right = 131.0
offset_bottom = 78.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "0"

[node name="Label3" type="Label" parent="VBoxContainer/Score/VBoxContainer"]
visible = false
layout_mode = 2
offset_top = 82.0
offset_right = 287.0
offset_bottom = 105.0
size_flags_horizontal = 4
text = "Du hast einen neuen Highscore geschafft!"

[node name="footer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
offset_top = 492.0
offset_right = 709.0
offset_bottom = 589.0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/footer"]
layout_mode = 2
offset_top = 50.0
offset_right = 709.0
offset_bottom = 97.0
size_flags_horizontal = 4
theme_override_constants/separation = 40

[node name="play_button" type="Button" parent="VBoxContainer/footer/HBoxContainer"]
layout_mode = 2
offset_right = 311.0
offset_bottom = 47.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Erneut spielen"

[node name="menu_button" type="Button" parent="VBoxContainer/footer/HBoxContainer"]
layout_mode = 2
offset_left = 351.0
offset_right = 709.0
offset_bottom = 47.0
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Zurück zum Menü"

[connection signal="pressed" from="VBoxContainer/footer/HBoxContainer/play_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/footer/HBoxContainer/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/footer/HBoxContainer/menu_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/footer/HBoxContainer/menu_button" to="." method="_on_menu_button_pressed"]
